# loupe

./: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bind.rs  cell.rs  commands.rs  db.rs  error.rs  export.rs  import.rs  introspect.rs  lib.rs  main.rs  model.rs  mutate.rs  prisma.rs  query.rs  rows.rs  secrets.rs  sql.rs  store.rs
src/components/: BulkBar.tsx  CellEditor.tsx  CellValue.tsx  Confirm.tsx  ConnectionForm.css  ConnectionForm.tsx  ConnectionSwitcher.css  ConnectionSwitcher.tsx  DeleteConfirmBody.tsx  ExportDialog.tsx  FkPicker.tsx  ImportDialog.css  ImportDialog.tsx  ResultGrid.tsx  Sidebar.css  Sidebar.tsx  SqlAutocomplete.tsx  Switch.tsx  ThemeToggle.tsx  TypeBadge.tsx
src/lib/: api.ts  cells.ts  format.ts  pgtypes.ts  relations.ts  sqlComplete.ts  sqlGuard.ts  swr.ts  theme.ts  types.ts
src/styles/: components.css  global.css  tokens.css
src/views/: ConnectionsView.css  ConnectionsView.tsx  DataTab.css  DataTab.tsx  MainPane.css  MainPane.tsx  QueryTab.css  QueryTab.tsx  StructureTab.css  StructureTab.tsx  Workspace.css  Workspace.tsx
