[package]
name = "loupe"
version = "0.1.0"
description = "Loupe — a modern desktop PostgreSQL client"
authors = ["Loupe"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique so it does not conflict with the
# bin name on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "loupe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Async Postgres access. TLS via rustls only — NoTls is never enabled.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
] }
tokio = { version = "1", features = ["sync"] }
futures = "0.3"

# Type-aware cell decoding.
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# OS-native secret storage for connection passwords.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

# Spreadsheet IO: write with rust_xlsxwriter, read with calamine.
rust_xlsxwriter = "0.79"
calamine = { version = "0.26", features = ["dates"] }

# Wipe connection strings from memory once consumed.
zeroize = { version = "1", features = ["derive"] }

thiserror = "2"

[profile.release]
# Disable debug tooling and shrink the release binary.
strip = true
lto = true
codegen-units = 1
panic = "abort"
